# mixseek-quant-insight

./: .env.template  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude/: settings.json
dockerfiles/minimal/: .env.template  Dockerfile  Makefile
docs/: config_guide.md  quickstart.md
examples/: competition.toml  evaluator.toml  orchestrator.toml
examples/agents/members/: submission_creator_gemini_deterministic.toml  submission_creator_gemini_stochastic.toml  train_analyzer_gemini_deterministic.toml  train_analyzer_gemini_stochastic.toml
examples/agents/teams/: minimal_gemini_deterministic.toml  minimal_gemini_stochastic.toml
src/quant_insight/: __init__.py  exceptions.py
src/quant_insight/adapter/: __init__.py  signal_to_strategy.py
src/quant_insight/agents/local_code_executor/: agent.py  models.py  output_models.py  tools.py
src/quant_insight/analysis/: __init__.py  cost.py
src/quant_insight/api/: __init__.py  app.py  schemas.py
src/quant_insight/api/routes/: ensemble.py  screening.py
src/quant_insight/cli/: __init__.py  main.py
src/quant_insight/cli/commands/: __init__.py  api.py  config.py  data.py  db.py  export.py  screening.py  signal.py
src/quant_insight/constants/: __init__.py  preloaded_modules.py
src/quant_insight/data_build/: __init__.py  base_adapter.py  data_splitter.py  execution_analyzer.py  return_builder.py
src/quant_insight/data_build/boj/: __init__.py  adapter.py  models.py
src/quant_insight/data_build/jquants/: __init__.py  adapter.py  models.py  rate_limiter.py
src/quant_insight/ensemble/: __init__.py  builder.py
src/quant_insight/evaluator/: __init__.py  backtest_loop.py  correlation_sharpe_ratio.py  submission_parser.py
src/quant_insight/models/: __init__.py  backtest_result.py  competition_config.py  competition_metadata.py  data_config.py  data_rows.py  data_split_config.py  preloaded_module.py  return_definition.py
src/quant_insight/pipeline/: __init__.py  production.py  result_models.py  screening.py
src/quant_insight/signal/: generator.py
src/quant_insight/storage/: __init__.py  implementation_store.py  schema.py  screening_store.py
src/quant_insight/utils/: __init__.py  config.py  env.py
src/quant_insight/utils/parse_logs/: __init__.py
src/quant_insight/utils/parse_logs/common/: __init__.py  fence.py
src/quant_insight/utils/parse_logs/duckdb/: __init__.py  exporter.py  formatters.py
src/quant_insight/utils/parse_logs/logfire/: __init__.py  convert_leader_logs_to_md.py  convert_submission_logs_to_md.py  fetch_leader_logs.sql  fetch_member_logs.sql  fetch_submission_logs.sql
tests/: __init__.py  test_sample.py
tests/contract/: test_correlation_sharpe_ratio_interface.py  test_data_source_adapter_interface.py
tests/e2e/data_build/: __init__.py  test_jquants_e2e.py
tests/fixtures/: competition.toml
tests/integration/: test_config_loading.py
tests/integration/agents/local_code_executor/: conftest.py  test_local_code_executor_integration.py  test_minimal_env.py
tests/integration/cli/: __init__.py  test_export_cli.py
tests/integration/evaluator/: __init__.py  test_backtest_pipeline.py
tests/unit/: test_exceptions.py
tests/unit/adapter/: test_signal_to_strategy.py
tests/unit/agents/local_code_executor/: conftest.py  test_agent.py  test_models.py  test_output_models.py  test_tools.py
tests/unit/analysis/: test_cost.py
tests/unit/api/: test_routes.py  test_schemas.py
tests/unit/cli/: test_cli_api.py  test_cli_data.py  test_config_cli.py  test_setup_cli.py
tests/unit/data_build/: test_data_splitter.py  test_execution_analyzer.py  test_refresh.py  test_return_builder.py
tests/unit/data_build/jquants/: __init__.py  test_adapter.py  test_models.py  test_rate_limiter.py
tests/unit/ensemble/: test_builder.py
tests/unit/evaluator/: __init__.py  test_backtest_loop.py  test_correlation_sharpe_ratio.py  test_submission_parser.py
tests/unit/models/: test_backtest_result.py  test_competition_config.py  test_competition_metadata.py  test_data_config.py  test_data_rows.py  test_data_split_config.py  test_return_definition.py
tests/unit/pipeline/: test_production.py  test_screening.py
tests/unit/signal_gen/: test_generator.py
tests/unit/storage/: test_implementation_store.py  test_screening_store.py
tests/unit/utils/: test_env.py
tests/unit/utils/parse_logs/: __init__.py  test_duckdb_to_md.py  test_formatters.py
