[build-system]
requires = ["uv-build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "mixseek-quant-insight"
version = "0.1.0"
description = "Algorithmic trading strategies using mixseek-core framework"
readme = "README.md"
requires-python = ">=3.13.9"
authors = [
    { name = "AlpacaTech Co. Ltd." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
keywords = ["algorithmic-trading", "trading-strategies", "mixseek", "multi-agent", "quantitative-finance"]
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai>=1.39.0",
    "typer>=0.20.0",
    "mixseek-core @ git+https://github.com/mixseek/mixseek-core.git@develop",
    "polars>=1.36.1",
    "pandas>=2.2.0",
    "scipy>=1.15.2",
    "numpy>=2.2.4",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[project.scripts]
quant-insight = "quant_insight.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pandas-stubs",
    "scipy-stubs",
    "logfire>=4.15.1",  # Observability for development/debugging
    "aiohttp>=3.13.0",  # Required for WebhookIntegrationHook tests
    "jupyterlab>=4.3.5",  # Jupyter Lab for interactive development
    "jupyter>=1.1.1",  # Jupyter Notebook
    "ipykernel>=6.29.5",  # IPython kernel for Jupyter
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "quant_insight"

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "N999"]  # N999: Allow Streamlit page naming (1_execution.py)

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["src"]
exclude = ["docs/", "examples/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_no_return = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (medium speed, mocked external services)",
    "e2e: End-to-end tests (slow, real external services)",
    "contract: Contract tests (API interface validation)",
    "performance: Performance benchmark tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
