[build-system]
requires = ["uv-build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "mixseek-quant-insight"
version = "0.1.0"
description = "Agentic trading strategies using mixseek-core framework"
readme = "README.md"
requires-python = ">=3.13.7"
authors = [
    { name = "AlpacaTech Co. Ltd." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
keywords = ["algorithmic-trading", "trading-strategies", "mixseek", "multi-agent", "quantitative-finance"]
dependencies = [
    "mixseek-core>=v0.1.0a8",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.39.0",
    "typer>=0.20.0",
    "polars>=1.36.1",
    "pandas>=2.2.0",
    "scipy>=1.15.2",
    "numpy>=2.2.4",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "httpx>=0.28.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]

[project.scripts]
quant-insight = "quant_insight.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pandas-stubs",
    "scipy-stubs",
    "types-tqdm>=4.67.0",
    "logfire>=4.15.1",
    "aiohttp>=3.13.0",
    "jupyterlab>=4.3.5",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "j-quants-doc-mcp @ git+https://github.com/J-Quants/j-quants-doc-mcp.git"
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "quant_insight"

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "N999"]  # N999: Allow Streamlit page naming (1_execution.py)

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["src"]
exclude = [
    "build/",
    "debug/",
    "draft/",
    "docs/",
    "workspaces/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_no_return = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
env_files = ["dockerfiles/minimal/.env"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (medium speed, mocked external services)",
    "e2e: End-to-end tests (slow, real external services)",
    "contract: Contract tests (API interface validation)",
    "performance: Performance benchmark tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
